--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <H2 style="color:white;"> WELCOME TO MY PORTFOLIO!!</H2>
 
-              <img src="keyan.jpeg" class="logo">
+              <img src="index.jpeg" class="logo">
               <ul>
                   <li><a href="Skills.html">Skills</a></li>
                   <li><a href="Projects.html">Projects</a></li>
