--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div class="content">
 <h2 style="text-align: center;">
 <a href="https://github.com/KarthikeyanAnil">SEE MY GITHUB</a><a href="https://www.linkedin.com/in/keyan-a-79826a252">SEE MY LINKEDIN</a>
-<a href="Resume.html">SEE MY RESUME</a>
+<a href="resume.html">SEE MY RESUME</a>
 </h2>
 
 
